UtahLiveDataTest/src/objects/PaymentBudgetCategory__c.object
<CustomObject>
    <description>[Business] Need more details</description>
    <fields>
        <fullName>AdminAwardedBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Awarded Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminCumulativeExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Cumulative Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminCurrentExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Current Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminPendingPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Pending Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminQ1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminQ2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminQ3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminRemainingAmount__c</fullName>
        <formula>AdminAwardedBudget__c - AdminSpentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminRequestedExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Requested Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminRequestedExpense__c</fullName>
        <formula>AdminQ1__c + AdminQ2__c + AdminQ3__c + AdminQ4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Requested Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminSpentAmount__c</fullName>
        <formula>AdminYTDReimbursementPaid__c + AdminPendingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Spent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminUpdatedYTDExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Updated YTD Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminYTDExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin YTD Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminYTDReimbursementPaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdvanceApplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advance Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedAdvance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedExpense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Budget Category</label>
        <referenceTo>AwardBudgetCategory__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardFundingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Funding Account</label>
        <referenceTo>AwardFundingAccount__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardId__c</fullName>
        <formula>PaymentRequest__r.Award__c</formula>
        <label>AwardId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardYTDReimbursementPaid__c</fullName>
        <formula>AwardBudgetCategory__r.YTDReimbursementPaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardYTDReimbursementPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardedBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BalanceInAdvance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BalanceInAdvance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategoryName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BudgetCategoryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashMatchBudgeted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Match Budgeted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashMatchExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Match Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashMatchRemaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Match Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashMatchRequested__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Match Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CumulativeExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cumulative Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DisallowedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Disallowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinalBudget__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Account</label>
        <referenceTo>FundingAccount__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantApprovedAdvance__c</fullName>
        <formula>GrantBudgetCategory__r.Advance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Approved Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantApprovedExpense__c</fullName>
        <formula>GrantBudgetCategory__r.Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Approved Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantBalanceInAdvance__c</fullName>
        <formula>GrantBudgetCategory__r.BalanceInAdvance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantBalanceInAdvance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Budget Category</label>
        <referenceTo>GrantBudgetCategory__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantProjectArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Project Area</label>
        <referenceTo>GrantServiceArea__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantRemainingBudget__c</fullName>
        <formula>GrantBudgetCategory__r.RemainingBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantTotalCheckAmountPaid__c</fullName>
        <formula>GrantBudgetCategory__r.AmountDue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantTotalCheckAmountPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantYTDSpent__c</fullName>
        <formula>GrantBudgetCategory__r.YeartoDateSpent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant YTD Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeShare__c</fullName>
        <label>Grantee Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HideAdvanceRequest__c</fullName>
        <formula>ISPICKVAL(PaymentRequest__r.Grant__r.IsAdvancePermitted__c, &apos;No&apos;)</formula>
        <label>Hide Advance Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBuildupNew__c</fullName>
        <formula>Text( PaymentRequest__r.Status__c )!=&apos;Created&apos;</formula>
        <label>HideBuildupNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditOnPayment__c</fullName>
        <formula>OR(ISPICKVAL(PaymentRequest__r.Status__c,&apos;Approved&apos;),ISPICKVAL(PaymentRequest__r.Status__c,&apos;Paid&apos;),ISPICKVAL(PaymentRequest__r.Status__c,&apos;Rejected&apos;),ISPICKVAL(PaymentRequest__r.Status__c,&apos;Submitted to Grantor&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditOnPayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>OR(
   NOT(
       OR(
          ISPICKVAL(PaymentRequest__r.Status__c, &apos;Created&apos;),
          ISPICKVAL(PaymentRequest__r.Status__c, &apos;Change Requested&apos;)
       )
   ),
   OR(CONTAINS(RowNumber__c, &apos;599&apos;),
      CONTAINS(RowNumber__c, &apos;213&apos;)
   ),
   AND($Profile.Name != &apos;SPI&apos;,
       $Profile.Name != &apos;SPA&apos;
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFundingAccount__c</fullName>
        <formula>(TEXT($User.UserType) = &apos;PowerPartner&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFundingAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIndirectCostEdit__c</fullName>
        <formula>OR(BudgetCategory__r.Name=&apos;Indirect Costs&apos; , TEXT(PaymentRequest__r.Status__c)!=&apos;Created&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIndirectCostEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBuildupBtn__c</fullName>
        <description>Logic for Hiding New Buildup popup</description>
        <formula>Text( PaymentRequest__r.Status__c )!=&apos;Created&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Buildup popup</inlineHelpText>
        <label>Hide New Buildup Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InKindBudgeted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Budgeted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindMatchBudgeted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Match Budgeted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindMatchRemaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Match Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindMatchRequested__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Match Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKindRemaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Kind Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NetPayment__c</fullName>
        <formula>RequestedExpense__c  - (AdvanceApplied__c+DisallowedAmount__c)</formula>
        <label>Net Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofServiceAreas__c</fullName>
        <formula>PaymentRequest__r.Grant__r.NumberofProjectAreas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Service Areas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentRefreshDataFlag__c</fullName>
        <formula>PaymentRequest__r.RefreshBudgetCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PaymentRefreshDataFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <label>Payment Request</label>
        <referenceTo>PaymentRequest__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaymentServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Service Area</label>
        <referenceTo>PaymentServiceArea__c</referenceTo>
        <relationshipLabel>Payment Budget Categories</relationshipLabel>
        <relationshipName>Payment_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <formula>TEXT(PaymentRequest__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <formula>TEXT(PaymentRequest__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PaymentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pending Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>AwardedBudget__c - SpentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedAdvance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedExpense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <formula>BudgetCategory__r.RowNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RowNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaTitle__c</fullName>
        <formula>GrantProjectArea__r.ServiceArea__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <formula>GrantProjectArea__r.ServiceArea__r.Title__c</formula>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpentAmount__c</fullName>
        <formula>YTDReimbursementPaid__c + PendingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TempYTDGrantAdvance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TempYTDGrantAdvance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TempYTDGrantExpense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TempYTDGrantExpense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRequestedAmount__c</fullName>
        <formula>AdminRequestedExpenditure__c + RequestedExpense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedQ1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Updated Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedQ2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Updated Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedQ3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Updated Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedRequestedExpense__c</fullName>
        <formula>UpdatedQ1__c + UpdatedQ2__c + UpdatedQ3__c + UpdatedQ4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Requested Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedYTDExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Updated YTD Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waived__c</fullName>
        <formula>RemainingAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDApprovedAdvance__c</fullName>
        <formula>IF(ApprovedAdvance__c &gt; ( AwardedBudget__c -  GrantTotalCheckAmountPaid__c ), TempYTDGrantAdvance__c,
(TempYTDGrantAdvance__c +  ApprovedAdvance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Advanced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDApprovedExpense__c</fullName>
        <formula>IF(ApprovedExpense__c &gt;  GrantRemainingBudget__c, TempYTDGrantExpense__c, (ApprovedExpense__c +  TempYTDGrantExpense__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDExpenditure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementAvailable__c</fullName>
        <formula>PaymentRequest__r.Award__r.YTDReimbursementAvailable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTDReimbursementAvailable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementPaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTDReimbursementPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDSpent__c</fullName>
        <formula>YTDApprovedExpense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Budget Category</label>
    <nameField>
        <displayFormat>PABC-{0000}</displayFormat>
        <label>Payment Budget Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CashRequestedAmountLessRemainingAmount</fullName>
        <active>true</active>
        <description>Cash Match Requested Amount Must be Less Than Remaining Amount</description>
        <errorConditionFormula>CashMatchExpenditure__c &gt; CashMatchRemaining__c</errorConditionFormula>
        <errorMessage>Cash Match Requested Amount Must be Less Than Remaining Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InKindRequestedAmountLessRemainingAmount</fullName>
        <active>true</active>
        <description>In Kind Requested Amount Must be Less Than Remaining Amount</description>
        <errorConditionFormula>InKindExpenditure__c &gt; InKindRemaining__c</errorConditionFormula>
        <errorMessage>In Kind Requested Amount Must be Less Than Remaining Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemainingBalanceNotNegative</fullName>
        <active>true</active>
        <description>Remaining Balance Must Not be Negative</description>
        <errorConditionFormula>RemainingAmount__c &lt; 0</errorConditionFormula>
        <errorMessage>Remaining Balance Must Not be Negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedAmountLessThanAwardedAmount</fullName>
        <active>true</active>
        <description>Request Amount Less Than or Equal To Awarded Amount</description>
        <errorConditionFormula>RequestedExpense__c  &gt;  AwardedBudget__c</errorConditionFormula>
        <errorMessage>Requested Amount Should Be Less Than or Equal To Awarded Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedAmountLessThanRemainingAmount</fullName>
        <active>true</active>
        <description>Requested Amount Must be Less Than Remaining Amount</description>
        <errorConditionFormula>RequestedExpense__c &gt; RemainingAmount__c</errorConditionFormula>
        <errorMessage>Requested Amount Must be Less Than Remaining Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedAmountLessThanRemainingBalance</fullName>
        <active>true</active>
        <description>Remaining Balance Must Not be Negative</description>
        <errorConditionFormula>RemainingAmount__c &lt; 0</errorConditionFormula>
        <errorMessage>Remaining Balance Must Not be Negative</errorMessage>
    </validationRules>
</CustomObject>